--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@lottiefiles/dotlottie-react": "^0.9.1",
     "next": "14.2.15",
     "react": "^18",
